feat: Update LinkedIn analysis and rename sales data file

--- a/analisis_linkedin.ipynb
+++ b/analisis_linkedin.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "2d46824a",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
    ],
    "source": [
     "# Cargar los datos desde un archivo CSV\n",
-    "dataframe = pd.read_csv('supermarket_es.csv')\n",
+    "dataframe = pd.read_csv('ventas_tienda_cafe.csv')\n",
     "print(\"Datos cargados correctamente\")\n",
     "\n",
     "# Mostrar las primeras filas del DataFrame\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "185bf13d",
    "metadata": {},
    "outputs": [
